fix: fixes loader alignments

--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -16,12 +16,6 @@ $secondary-color: #eaebed;
   height: 100vh;
   justify-content: center;
 
-  &__container {
-    display: block;
-    height: 100%;
-    width: 100%;
-  }
-
   &__circle {
     display: flex;
     margin: 0px auto;
